--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 
 		<!--DEPENDENCIES-->
 		<junit-bom.version>5.6.2</junit-bom.version>
+		<algs4.version>1.0.0</algs4.version>
+		<assertj-core.version>3.21.0</assertj-core.version>
 
 		<!--PLUGINS-->
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -33,7 +35,7 @@
 			<dependency>
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
-				<version>5.6.2</version>
+				<version>${junit-bom.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -44,7 +46,7 @@
 		<dependency>
 			<groupId>edu.princeton.cs.algs4</groupId>
 			<artifactId>algs4</artifactId>
-			<version>1.0.0</version>
+			<version>${algs4.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -59,7 +61,7 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.21.0</version>
+			<version>${assertj-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
