--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 		<project.java.version>11</project.java.version>
 
 		<!--DEPENDENCIES-->
-		<junit-bom.version>5.6.2</junit-bom.version>
+		<junit-bom.version>5.10.1</junit-bom.version>
 		<algs4.version>1.0.0</algs4.version>
-		<assertj-core.version>3.21.0</assertj-core.version>
+		<assertj-core.version>3.24.2</assertj-core.version>
 
 		<!--PLUGINS-->
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -56,6 +56,11 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
